--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     border: 2px solid #b39607;
-    border-radius: 10px;
+    border-radius: 40% 10%;
     padding: 20px;
     width: 300px;
     cursor: pointer;
