--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 300px;
     cursor: pointer;
     background-color: #151515;
-    transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out, border-radius 0.3s ease;
   }
   
   .about-box:hover, .projects-box:hover {
