--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ body {
   }
   
   .about-box, .projects-box {
-    margin-right: 15px;
-    font-size: 25px;
+    margin-right: 0.93rem;
+    font-size: 1.55rem;
     font-weight: bold;
-    border: 2px solid #b39607;
+    border: 0.12rem solid #b39607;
     border-radius: 1rem;
-    padding: 20px;
+    padding: 1.24rem;
     width: 80%;
     cursor: pointer;
     background-color: #151515;
@@ -33,8 +33,8 @@ body {
     font-weight: lighter;
     color: #937600;
     display: none;
-    margin-top: 10px;
-    font-size: 14px;
+    margin-top: 0.6rem;
+    font-size: 0.87rem;
   }
   
   .about-box.expand .about-text {
@@ -46,15 +46,15 @@ body {
   }
   
   .about-box.expand, .projects-box.expand {
-    margin-bottom: 29px;
+    margin-bottom: 1.8rem;
   }
   
   .about-box:not(.expand) {
-    margin-bottom: 103px;
+    margin-bottom: 6.4rem;
   }
   
   .projects-box:not(.expand) {
-    margin-bottom: 119px;
+    margin-bottom: 7.4rem;
   }
   
   .insta-icon, .link-icon {
@@ -65,10 +65,10 @@ body {
     position: fixed;
     top: 30rem;
     right: 54%;
-    margin-right: 10px;
-    margin-top: 10px;
-    width: 40px;
-    height: 40px;
+    margin-right: 0.62rem;
+    margin-top: 0.62rem;
+    width: 2.48rem;
+    height: 2.48rem;
     transition: width 0.3s ease, height 0.3s ease, translate 0.3s ease, filter 0.3s ease;
   }
 
@@ -76,23 +76,23 @@ body {
     position: fixed;
     top: 30rem;
     right: 46%;
-    margin-right: 10px;
-    margin-top: 10px;
-    width: 40px;
-    height: 40px;
+    margin-right: 0.62rem;
+    margin-top: 0.62rem;
+    width: 2.48rem;
+    height: 2.48rem;
     transition: width 0.3s ease, height 0.3s ease, translate 0.3s ease, filter 0.3s ease;
   }
   
   .insta-icon img:hover, .link-icon img:hover {
     translate: 0.5rem -0.5rem;
-    width: 60px;
-    height: 60px;
+    width: 3.73rem;
+    height: 3.73rem;
   }
   
   .about-text h3 {
     color: #937600;
     transition: color 0.3s ease, font-size 0.3s ease;
-    font-size: 17px;
+    font-size: 1.06rem;
     text-decoration: none;
   }
   
@@ -100,7 +100,7 @@ body {
     color: #937600;
     transition: color 0.3s ease, font-size 0.3s ease;
     font-style: italic;
-    font-size: 17px;
+    font-size: 1.06rem;
     text-decoration: none;
   }
   
@@ -108,7 +108,7 @@ body {
     color: #a08300;
     transition: color 0.3s ease, font-size 0.3s ease;
     font-style: italic;
-    font-size: 21px;
+    font-size: 1.3rem;
     font-weight: bold;
     text-decoration: none;
   }
