--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
   }
   
   .about-box, .projects-box {
+    display: flex;
+    justify-content: center;
     margin-right: 0.93rem;
     font-size: 1.55rem;
     font-weight: bold;
