--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
   
   .insta-icon img{
     position: fixed;
+    filter: brightness(120%) saturate(120%);
     top: 32rem;
     right: 56%;
     margin-right: 0.62rem;
@@ -74,6 +75,7 @@ body {
 
   .link-icon img{
     position: fixed;
+    filter: brightness(80%) saturate(180%);
     top: 32rem;
     right: 44%;
     margin-right: 0.62rem;
