--- a/style.css
+++ b/style.css
@@ -13,17 +13,24 @@ body {
   }
   
   .about-box, .projects-box {
-    margin-right: 0.93rem;
+    position: fixed;
     font-size: 1.55rem;
     font-weight: bold;
     border: 0.12rem solid #b39607;
     border-radius: 1rem;
-    padding: 1.24rem;
     width: 80%;
     cursor: pointer;
     background-color: #151515;
     transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out, border-radius 0.3s ease;
   }
+
+.about-box {
+    top: 80%;
+}
+
+.projects-box {
+    top: 60%;
+}
   
   .about-box:hover, .projects-box:hover {
     transform: scale(1.05);
