--- a/style.css
+++ b/style.css
@@ -20,17 +20,18 @@ body {
     border: 0.12rem solid #b39607;
     border-radius: 1rem;
     width: 80%;
+    height: 2rem;
     cursor: pointer;
     background-color: #151515;
     transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out, border-radius 0.3s ease;
   }
 
 .about-box {
-    top: 1rem;
+    top: 2rem;
 }
 
 .projects-box {
-    top: 3rem;
+    top: 8rem;
 }
   
   .about-box:hover, .projects-box:hover {
