--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ body {
     background-color: #151515;
     transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out, border-radius 0.3s ease;
   }
-  
+
+.about-box .details ul {
+    list-style-type: none;
+}
+
   .about-box:hover, .projects-box:hover {
     transform: scale(1.05);
   }
