--- a/style.css
+++ b/style.css
@@ -40,7 +40,15 @@ body {
     margin-top: 0.6rem;
     font-size: 0.87rem;
   }
-  
+
+h3 {
+    font-weight: lighter;
+    color: #937600;
+    display: none;
+    margin-top: 0.6rem;
+    font-size: 0.87rem;
+}
+
   .about-box.expand .about-text {
     display: block;
   }
