--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ input, textarea {
   padding: 8px;
   margin-top: 5px;
   background-color: #1d3c4d;
+  color:#e7afab
 }
 button {
   background-color: #e7afab;
